--- a/init/systemd/meson.build
+++ b/init/systemd/meson.build
@@ -1,1 +1,1 @@
-install_data('open_monitor.service', install_dir : get_option('systemd-install-directory'))
+install_data('open_monitor.service', install_dir : get_option('systemd-prefix'))
