--- a/src/meson.build
+++ b/src/meson.build
@@ -7,7 +7,8 @@ deps = [
     gstsdp_dep,
     gstwebrtc_dep,
     libsoup_dep,
-    json_glib_dep
+    json_glib_dep,
+    glibmm_dep
 ]
 
 babyfoon = executable('open_monitor', src,
