New: Dev: Splitted virtual environments for different architectures. Added support for a language-server in the virtual environments

--- a/crossfiles/clang.ini.in
+++ b/crossfiles/clang.ini.in
@@ -15,6 +15,7 @@ endian = 'little'
 
 [properties]
 sys_root = '@SYSROOT@'
+boost_root = sys_root + '/usr'
 
 [built-in options]
 c_args = ['--sysroot', '@SYSROOT@']
