--- a/crossfiles/gcc.ini.in
+++ b/crossfiles/gcc.ini.in
@@ -17,6 +17,7 @@ endian = 'little'
 
 [properties]
 sys_root = '@SYSROOT@'
+boost_root = sys_root + '/usr'
 
 [built-in options]
 c_args = ['--sysroot', '@SYSROOT@']
